# serializer version: 1
# name: TestActivityTransformerSnapshot.test_transform_snapshot
  dict({
    '_dq_error': False,
    '_dq_warn': False,
    '_index': 0,
    '_state': <BioactivityState.VALIDATED: 'validated'>,
    'action_type': None,
    'action_type_description': None,
    'action_type_parent_type': None,
    'activity_comment': 'High activity',
    'activity_id': '12345678',
    'activity_properties': None,
    'activity_relation': '=',
    'activity_type': 'IC50',
    'activity_value': 15.0,
    'assay_description': 'Binding assay',
    'assay_id': 'CHEMBL123456',
    'assay_type': 'B',
    'assay_variant_accession': None,
    'assay_variant_mutation': None,
    'bao_endpoint': None,
    'bao_endpoint_iri': None,
    'bao_endpoint_mapping_status': 'missing',
    'bao_format': None,
    'bao_format_iri': None,
    'bao_format_mapping_status': 'missing',
    'bao_label': None,
    'bao_ontology_version': None,
    'canonical_smiles': 'CC(=O)Oc1ccccc1C(=O)O',
    'content_hash': '<content_hash>',
    'data_validity_comment': None,
    'data_validity_description': None,
    'entity_id': '<entity_id>',
    'journal': None,
    'ligand_efficiency_bei': 14.06,
    'ligand_efficiency_le': 0.26,
    'ligand_efficiency_lle': 1.3,
    'ligand_efficiency_sei': 5.56,
    'manual_curation_flag': None,
    'molecule_id': 'CHEMBL25',
    'molecule_pref_name': 'ASPIRIN',
    'original_activity_id': None,
    'parent_molecule_id': None,
    'pchembl_value': 7.82,
    'potential_duplicate': None,
    'publication_doi': None,
    'publication_id': 'CHEMBL789012',
    'publication_pmc_id': None,
    'publication_pmid': None,
    'publication_year': None,
    'qudt_ontology_version': None,
    'qudt_unit_iri': None,
    'qudt_unit_mapping_status': 'missing',
    'qudt_units': None,
    'record_id': 1234,
    'src_id': 1,
    'standard_flag': None,
    'standard_relation': '=',
    'standard_text_value': None,
    'standard_type': 'IC50',
    'standard_units': 'nM',
    'standard_upper_value': None,
    'standard_value': 15.0,
    'target_id': 'CHEMBL1862',
    'target_organism': 'Homo sapiens',
    'target_pref_name': 'Cyclooxygenase-2',
    'target_taxonomy_id': None,
    'text_value': None,
    'toid': None,
    'units': None,
    'uo_ontology_version': None,
    'uo_unit_iri': None,
    'uo_unit_mapping_status': 'missing',
    'uo_units': None,
    'upper_value': None,
  })
# ---
# name: TestAssayTransformerSnapshot.test_transform_snapshot
  dict({
    '_dq_error': False,
    '_dq_warn': False,
    '_index': 0,
    'aidx': None,
    'assay_category': None,
    'assay_cell_type': None,
    'assay_classifications': '{"class":"Pharmacology"}',
    'assay_description': 'Test assay description',
    'assay_group': None,
    'assay_id': 'CHEMBL1234567',
    'assay_organism': 'Homo sapiens',
    'assay_parameters': '{"param":"IC50"}',
    'assay_pref_name': None,
    'assay_strain': None,
    'assay_subcellular_fraction': None,
    'assay_subcellular_fraction_raw': None,
    'assay_taxonomy_id': 9606,
    'assay_test_type': None,
    'assay_tissue': None,
    'assay_type': 'B',
    'assay_type_description': 'Binding',
    'bao_format': 'BAO_0000357',
    'bao_format_iri': 'https://purl.obolibrary.org/obo/BAO_0000357',
    'bao_format_mapping_status': 'mapped',
    'bao_label': 'single protein format',
    'bao_ontology_version': '2.8.18a',
    'cell_id': None,
    'confidence_description': None,
    'confidence_score': 9,
    'content_hash': '<content_hash>',
    'entity_id': '<entity_id>',
    'publication_id': 'CHEMBL456',
    'relationship_description': None,
    'relationship_type': 'D',
    'score': None,
    'src_assay_id': None,
    'src_id': 1,
    'target_id': 'CHEMBL123',
    'tissue_id': None,
    'variant_accession': None,
    'variant_isoform': None,
    'variant_mutation': None,
    'variant_organism': None,
    'variant_sequence': None,
    'variant_sequence_json': None,
    'variant_taxonomy_id': None,
  })
# ---
# name: TestMoleculeTransformerSnapshot.test_transform_snapshot
  dict({
    '_dq_error': False,
    '_dq_warn': False,
    '_index': 0,
    'aromatic_ring_count': None,
    'atc_classifications': None,
    'availability_type': None,
    'black_box_warning': 0,
    'canonical_smiles': 'CC(=O)Oc1ccccc1C(=O)O',
    'chirality': None,
    'content_hash': '<content_hash>',
    'cross_references': None,
    'dosed_ingredient': None,
    'entity_id': '<entity_id>',
    'first_approval': 1950.0,
    'first_in_class': None,
    'hba_count': 4,
    'hbd_count': 1,
    'heavy_atom_count': None,
    'helm_notation': None,
    'hierarchy_active_chembl_id': 'CHEMBL25',
    'hierarchy_child_chembl_id': 'CHEMBL25',
    'hierarchy_parent_chembl_id': 'CHEMBL25',
    'inchi_key': 'BSYNRYMUTXBXSQ-UHFFFAOYSA-N',
    'inorganic_flag': None,
    'logp': 1.19,
    'logp_method': 'alogp',
    'max_phase': 4,
    'molecular_formula': None,
    'molecular_weight': None,
    'molecule_hierarchy': '{"active_chembl_id":"CHEMBL25","molecule_id":"CHEMBL25","parent_chembl_id":"CHEMBL25"}',
    'molecule_id': 'CHEMBL25',
    'molecule_properties': '{"alogp":1.19,"hba":4,"hbd":1,"mw_freebase":180.16,"psa":63.6,"ro3_pass":"Y"}',
    'molecule_species': None,
    'molecule_structures': '{"canonical_smiles":"CC(=O)Oc1ccccc1C(=O)O","standard_inchi":"InChI=1S/C9H8O4/c...","standard_inchi_key":"BSYNRYMUTXBXSQ-UHFFFAOYSA-N"}',
    'molecule_synonyms': None,
    'molecule_type': 'Small molecule',
    'mw_freebase': 180.16,
    'natural_product': None,
    'oral': True,
    'parenteral': None,
    'polar_surface_area': 63.6,
    'polymer_flag': None,
    'pref_name': 'ASPIRIN',
    'prodrug': None,
    'qed_score': None,
    'ro3_pass': 'Y',
    'ro5_violation_count': None,
    'rotatable_bond_count': None,
    'standard_inchi': 'InChI=1S/C9H8O4/c...',
    'structure_type': 'MOL',
    'therapeutic_flag': True,
    'topical': None,
    'usan_stem': None,
    'usan_stem_definition': None,
    'usan_substem': None,
    'usan_year': None,
    'withdrawn_flag': None,
  })
# ---
# name: TestPubChemCompoundTransformerSnapshot.test_transform_snapshot
  dict({
    '_dq_error': False,
    '_dq_warn': False,
    '_index': 0,
    'atom_stereo_count': None,
    'bond_stereo_count': None,
    'canonical_smiles': 'CC(=O)OC1=CC=CC=C1C(=O)O',
    'charge': None,
    'chemical_standardization_policy_version': 'pubchem-basic-v1',
    'chemical_standardization_status': 'standardized',
    'chemical_standardization_warnings': None,
    'complexity': None,
    'conformer_count_3d': None,
    'conformer_rmsd_3d': None,
    'content_hash': '<content_hash>',
    'covalent_unit_count': None,
    'defined_atom_stereo_count': None,
    'defined_bond_stereo_count': None,
    'effective_rotor_count_3d': None,
    'entity_id': '<entity_id>',
    'exact_mass': None,
    'feature_acceptor_count_3d': None,
    'feature_anion_count_3d': None,
    'feature_cation_count_3d': None,
    'feature_count_3d': None,
    'feature_donor_count_3d': None,
    'feature_hydrophobe_count_3d': None,
    'feature_ring_count_3d': None,
    'h_bond_acceptor_count': None,
    'h_bond_donor_count': None,
    'heavy_atom_count': None,
    'inchi': 'InChI=1S/C9H8O4/c...',
    'inchi_key': 'BSYNRYMUTXBXSQ-UHFFFAOYSA-N',
    'isomeric_smiles': 'CC(=O)OC1=CC=CC=C1C(=O)O',
    'isotope_atom_count': None,
    'iupac_name': '2-acetyloxybenzoic amolecule_id',
    'molecular_formula': 'C9H8O4',
    'molecular_weight': 180.16,
    'molecule_id': '2244',
    'monoisotopic_mass': None,
    'rotatable_bond_count': None,
    'standardized_canonical_smiles': 'CC(=O)OC1=CC=CC=C1C(=O)O',
    'standardized_inchi': 'InChI=1S/C9H8O4/c...',
    'standardized_inchi_key': 'BSYNRYMUTXBXSQ-UHFFFAOYSA-N',
    'standardized_isomeric_smiles': 'CC(=O)OC1=CC=CC=C1C(=O)O',
    'structure_parent_key': 'inchikey14:BSYNRYMUTXBXSQ',
    'tpsa': None,
    'undefined_atom_stereo_count': None,
    'undefined_bond_stereo_count': None,
    'volume_3d': None,
    'x_steric_quadrupole_3d': None,
    'xlogp': None,
    'y_steric_quadrupole_3d': None,
    'z_steric_quadrupole_3d': None,
  })
# ---
# name: TestPubMedPublicationTransformerSnapshot.test_transform_full_snapshot
  dict({
    '_dq_error': False,
    '_dq_warn': False,
    '_index': 0,
    '_lookup_method': 'pmid',
    '_original_id': None,
    '_source': 'pubmed',
    'abstract': 'This is the abstract of the test article.',
    'abstract_structured': False,
    'affiliation_list': None,
    'affiliation_structured': None,
    'author_count': 2,
    'author_keys': 'Smith_J|Doe_J',
    'author_orcids': None,
    'authors': '["Smith, John","Doe, Jane"]',
    'authors_with_affiliations': '[{"affiliations":[],"initials":null,"name_hash":"Smith, John"},{"affiliations":[],"initials":null,"name_hash":"Doe, Jane"}]',
    'chemical_count': 0,
    'chemicals': None,
    'citation_subset': None,
    'citations_made': 0,
    'content_hash': '<content_hash>',
    'country': 'United States',
    'databanks': None,
    'date_completed': None,
    'date_revised': None,
    'doi': '10.1234/test.2025.001',
    'entity_id': '<entity_id>',
    'gene_symbols': None,
    'grant_count': 0,
    'is_oa': None,
    'issn': '1234-5678',
    'issn_list': '["1234-5678"]',
    'issue': '3',
    'journal': 'Journal of Test Science',
    'journal_iso_abbrev': 'J Test Sci',
    'journal_issn_type': 'Print',
    'journal_name_short': 'J Test Sci',
    'keyword_count': 2,
    'language': 'eng',
    'medline_pgn': '123-145',
    'mesh_heading_count': 1,
    'mid': None,
    'nlm_unique_id': None,
    'oa_status': None,
    'page_first': '123',
    'page_last': '145',
    'page_range': '123-145',
    'pii': None,
    'pmc_id': 'PMC1234567',
    'pmid': '98765432',
    'pub_date': '2025-03-15',
    'pub_day': 15,
    'pub_month': 3,
    'publication_class': 'EXP',
    'publication_date': '2025-02-28',
    'publication_doi': None,
    'publication_pmc_id': None,
    'publication_pmid': None,
    'publication_status': None,
    'publication_subclass': 'Original Experimental Data',
    'publication_type': 'Journal Article|Research Support',
    'publication_type_raw': None,
    'publication_type_unified': 'Journal Article',
    'publication_types': '["Journal Article","Research Support"]',
    'publication_year': 2025,
    'publisher': None,
    'publisher_id': None,
    'subject_keywords': '["unit testing","python"]',
    'subject_mesh': '["Software Testing"]',
    'title': 'A Comprehensive Study of Unit Testing',
    'volume': '42',
  })
# ---
# name: TestPubMedPublicationTransformerSnapshot.test_transform_minimal_snapshot
  dict({
    '_dq_error': False,
    '_dq_warn': False,
    '_index': 0,
    '_lookup_method': 'pmid',
    '_original_id': None,
    '_source': 'pubmed',
    'abstract': None,
    'abstract_structured': False,
    'affiliation_list': None,
    'affiliation_structured': None,
    'author_count': 0,
    'author_keys': None,
    'author_orcids': None,
    'authors': None,
    'authors_with_affiliations': None,
    'chemical_count': 0,
    'chemicals': None,
    'citation_subset': None,
    'citations_made': 0,
    'content_hash': '<content_hash>',
    'country': None,
    'databanks': None,
    'date_completed': None,
    'date_revised': None,
    'doi': None,
    'entity_id': '<entity_id>',
    'gene_symbols': None,
    'grant_count': 0,
    'is_oa': None,
    'issn': None,
    'issn_list': None,
    'issue': None,
    'journal': None,
    'journal_iso_abbrev': None,
    'journal_issn_type': None,
    'journal_name_short': None,
    'keyword_count': 0,
    'language': None,
    'medline_pgn': None,
    'mesh_heading_count': 0,
    'mid': None,
    'nlm_unique_id': None,
    'oa_status': None,
    'page_first': None,
    'page_last': None,
    'page_range': None,
    'pii': None,
    'pmc_id': None,
    'pmid': '12345678',
    'pub_date': None,
    'pub_day': None,
    'pub_month': None,
    'publication_class': None,
    'publication_date': None,
    'publication_doi': None,
    'publication_pmc_id': None,
    'publication_pmid': None,
    'publication_status': None,
    'publication_subclass': None,
    'publication_type': None,
    'publication_type_raw': None,
    'publication_type_unified': None,
    'publication_types': None,
    'publication_year': None,
    'publisher': None,
    'publisher_id': None,
    'subject_keywords': None,
    'subject_mesh': None,
    'title': 'Test Article Title',
    'volume': None,
  })
# ---
# name: TestPublicationTransformerSnapshot.test_transform_snapshot
  dict({
    '_dq_error': False,
    '_dq_warn': False,
    '_index': 0,
    '_lookup_method': 'direct',
    '_original_id': 'CHEMBL1234567',
    '_source': 'chembl',
    'abstract': 'This is a test abstract for the document.',
    'author_keys': 'Author_T|Author_A',
    'authors': '["Test Author","Another Author"]',
    'chembl_release': 'CHEMBL_34',
    'content_hash': '<content_hash>',
    'creation_date': '2024-01-15',
    'doi': '10.1000/test.doi',
    'entity_id': '<entity_id>',
    'issue': '5',
    'journal': 'Test Journal',
    'page_first': '100',
    'page_last': '110',
    'pmid': '12345678',
    'publication_doi': '10.1000/test.doi',
    'publication_id': 'CHEMBL1234567',
    'publication_pmc_id': None,
    'publication_pmid': '12345678',
    'publication_type': 'journal-article',
    'publication_type_raw': 'PUBLICATION',
    'publication_year': 2024,
    'src_id': 1,
    'title': 'Test Document Title',
    'volume': '10',
  })
# ---
# name: TestTargetComponentTransformerSnapshot.test_transform_snapshot
  dict({
    '_dq_error': False,
    '_dq_warn': False,
    '_index': 0,
    'accession': 'P12345',
    'component_id': 123,
    'component_type': 'PROTEIN',
    'content_hash': '<content_hash>',
    'description': 'Test protein component',
    'entity_id': '<entity_id>',
    'organism': 'Homo sapiens',
    'protein_classification_id': None,
    'protein_classification_ids': None,
    'protein_classifications': None,
    'target_component_synonyms': '[{"synonym":"Gene1"},{"synonym":"Protein1"}]',
    'target_component_xrefs': '{"xref_id":"P12345","xref_src_db":"UniProt"}',
    'taxonomy_id': 9606,
  })
# ---
# name: TestTargetTransformerSnapshot.test_transform_snapshot
  dict({
    '_dq_error': False,
    '_dq_warn': False,
    '_index': 0,
    'component_accessions': '["P35354"]',
    'component_descriptions': None,
    'component_ids': '[123]',
    'component_relationships': None,
    'component_types': '["PROTEIN"]',
    'content_hash': '<content_hash>',
    'cross_references': '{"xref_id":"P35354","xref_src_db":"UniProt"}',
    'downgraded': None,
    'entity_id': '<entity_id>',
    'organism': 'Homo sapiens',
    'organism_class': 'multicellular',
    'pipeline_stages': None,
    'pref_name': 'Cyclooxygenase-2',
    'primary_component_id': 123.0,
    'species_group_flag': None,
    'target_component_synonyms': None,
    'target_components': '{"accession":"P35354","component_id":123,"component_type":"PROTEIN","organism":"Homo sapiens","target_component_xrefs":[{"xref_id":"P35354","xref_src_db":"UniProt"}],"tax_id":9606}',
    'target_description': 'Prostaglandin G/H synthase 2',
    'target_ec_numbers': 'unknown',
    'target_gene_synonyms': 'unknown',
    'target_id': 'CHEMBL1862',
    'target_protein_synonyms': 'unknown',
    'target_type': 'SINGLE PROTEIN',
    'target_xref_go_component': 'unknown',
    'target_xref_go_function': 'unknown',
    'target_xref_go_process': 'unknown',
    'target_xref_iuphar_ids': 'unknown',
    'target_xref_pdb_ids': 'unknown',
    'target_xref_reactome_ids': 'unknown',
    'taxonomy_id': 9606,
  })
# ---
# name: TestUniProtProteinTransformerSnapshot.test_transform_snapshot
  dict({
    '_dq_error': False,
    '_dq_warn': False,
    '_index': 0,
    'accession': 'P12345',
    'acetylation': None,
    'active_sites': None,
    'activity_regulation': None,
    'alternative_products': None,
    'alternative_products_canonical_json': None,
    'alternative_products_raw_json': None,
    'annotation_score': None,
    'binding_sites': None,
    'biophysicochemical_properties': None,
    'biophysicochemical_properties_canonical_json': None,
    'biophysicochemical_properties_raw_json': None,
    'catalytic_activity': None,
    'caution': None,
    'cellular_component': None,
    'chembl_ids': None,
    'cofactors': None,
    'cofactors_canonical_json': None,
    'cofactors_raw_json': None,
    'content_hash': '<content_hash>',
    'cross_reference_count': None,
    'disease_involvement': None,
    'disulfide_bond': None,
    'domains': None,
    'drugbank_ids': None,
    'entity_id': '<entity_id>',
    'entry_created': None,
    'entry_modified': None,
    'entry_name': 'TEST_HUMAN',
    'entry_type': None,
    'entry_version': None,
    'feature_count': None,
    'features_canonical_json': None,
    'features_json': None,
    'features_raw_json': None,
    'flag': None,
    'function_comment': None,
    'gene_orf_names': None,
    'gene_primary': 'TEST1',
    'gene_synonyms': None,
    'genus': None,
    'glycosylation': None,
    'go_terms': None,
    'guidetopharmacology_ids': None,
    'induction': None,
    'interpro_xrefs': None,
    'intramembrane': None,
    'isoform_count': None,
    'isoform_ids': None,
    'isoform_names': None,
    'isoform_synonyms': None,
    'keyword_count': None,
    'keywords': None,
    'lineage': None,
    'lipidation': None,
    'modified_residue': None,
    'molecular_function': None,
    'organism_common': None,
    'organism_scientific': None,
    'pathway': None,
    'pdb_xrefs': None,
    'pfam_xrefs': None,
    'pharmaceutical_use': None,
    'phosphorylation': None,
    'phylum': None,
    'propeptide': None,
    'protein_alternative_names': None,
    'protein_ec_numbers': None,
    'protein_existence': None,
    'protein_name': 'Test protein',
    'protein_short_names': None,
    'publication_count': None,
    'reaction_ec_numbers': None,
    'reactions': None,
    'reactions_canonical_json': None,
    'reactions_raw_json': None,
    'reactome_xrefs': None,
    'reviewed': False,
    'secondary_accessions': None,
    'sequence': None,
    'sequence_checksum': None,
    'sequence_length': 500,
    'sequence_mass': None,
    'sequence_modified': None,
    'signal_peptide': None,
    'similarity_comment': None,
    'subcellular_location': None,
    'subunit': None,
    'superkingdom': None,
    'taxonomy_id': 9606,
    'tissue_specificity': None,
    'topology': None,
    'transmembrane': None,
    'ubiquitination': None,
  })
# ---
